[gd_scene load_steps=6 format=3 uid="uid://3yail7apadvr"]

[ext_resource type="Script" path="res://Scripts/pipe.gd" id="1_ui8j0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oe722"]

[sub_resource type="Animation" id="Animation_mhpv2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChainPolygon2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(32, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PipeStaticBody2D/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(16, 0, 40, 8, 72, 0, 96, 0, 40, 16, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PipeStaticBody2D/MovablePolygon2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HeatArea2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HeatArea2D/Polygon2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ja15p"]
resource_name = "unlock"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChainPolygon2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(32, 8), Vector2(24, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PipeStaticBody2D/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [PackedVector2Array(16, 0, 40, 8, 72, 0, 96, 0, 40, 16, 0, 0), PackedVector2Array(16, 0, 40, 24, 72, 0, 96, 0, 32, 32, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PipeStaticBody2D/MovablePolygon2D:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.424115]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HeatArea2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HeatArea2D/Polygon2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nxmb7"]
_data = {
"RESET": SubResource("Animation_mhpv2"),
"unlock": SubResource("Animation_ja15p")
}

[node name="Pipe" type="Node2D"]
script = ExtResource("1_ui8j0")

[node name="ChainPolygon2D" type="Polygon2D" parent="."]
position = Vector2(32, 8)
scale = Vector2(0.666667, 0.8)
polygon = PackedVector2Array(0, 0, 0, 40, -8, 48, 0, 56, 8, 56, 16, 48, 8, 40, 8, 0)

[node name="HandleArea2D" type="Area2D" parent="ChainPolygon2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChainPolygon2D/HandleArea2D"]
position = Vector2(4, 48)
shape = SubResource("CircleShape2D_oe722")

[node name="PipeStaticBody2D" type="StaticBody2D" parent="."]

[node name="MovablePolygon2D" type="Polygon2D" parent="PipeStaticBody2D"]
color = Color(0.0431373, 0.25098, 0.776471, 1)
polygon = PackedVector2Array(16, 0, 40, 8, 40, 16, 0, 0)

[node name="StaticPolygon2D" type="Polygon2D" parent="PipeStaticBody2D"]
color = Color(0.0431373, 0.25098, 0.776471, 1)
polygon = PackedVector2Array(72, 0, 40, 8, 40, 16, 96, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PipeStaticBody2D"]
polygon = PackedVector2Array(16, 0, 40, 8, 72, 0, 96, 0, 40, 16, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nxmb7")
}

[node name="HeatArea2D" type="Area2D" parent="."]
position = Vector2(32, 24)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="HeatArea2D"]
position = Vector2(246, 250)
rotation = 0.785398
polygon = PackedVector2Array(107.48, -42.4264, -350.018, -3.53559, -347.189, 3.53548, 107.48, 48.0833, 135.765, 19.799, 135.765, -14.1421)
disabled = true

[node name="Polygon2D" type="Polygon2D" parent="HeatArea2D"]
visible = false
position = Vector2(246, 250)
rotation = 0.785398
color = Color(0.831373, 0.27451, 0, 0.223529)
polygon = PackedVector2Array(107.48, -42.4264, -350.018, -3.53559, -347.189, 3.53548, 107.48, 48.0833, 135.765, 19.799, 135.765, -14.1421)

[connection signal="body_entered" from="ChainPolygon2D/HandleArea2D" to="." method="_on_handle_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="HeatArea2D" to="." method="_on_heat_area_2d_body_entered"]
[connection signal="body_exited" from="HeatArea2D" to="." method="_on_heat_area_2d_body_exited"]
